# src/main/java/mg/diha_agency_api/model/Admin.java
@@ -1,0 +1,33 @@
+package mg.diha_agency_api.model;
+
+import java.io.Serializable;
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.Table;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@AllArgsConstructor
+@NoArgsConstructor
+@Entity
+@Builder
+@Getter
+@Setter
+@Table(name = "admin")
+public class Admin implements Serializable {
+  @Id
+  @GeneratedValue(strategy = GenerationType.IDENTITY)
+  private Long adminId;
+
+  @Column(name = "username",unique = true)
+  private String username;
+
+  private String password;
+
+}
